--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,20 @@
 .poppins-font {
     font-family: "Poppins", sans-serif;
   }
+
+  .your-seat{
+    display: grid;
+    grid-template-columns: 10px repeat(4, 1fr);
+    grid-template-rows: repeat(10, 35px);
+    gap: 15px;
+    
+
+  }
+
+  .seat{
+    background-color: #F7F8F8;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
