javascript mathat upor diye jay

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,4 +19,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+  };
+
+.tbody{
+  display: flex;
+  width: 358px;
+  justify-content: space-between;
+}
